Fixed Share email link and Z-index for facebox overlay

--- a/public/stylesheets/multitask/general.css
+++ b/public/stylesheets/multitask/general.css
@@ -82,7 +82,7 @@ input.btn_gris{width:130px;height:28px;background:url(/images/multitask/bg_eleme
 .black_banner{background:none repeat scroll 0 0 #000000;padding:2px;height:269px;}
 .banner_flash_box{float:left;width:616px;}
 #home .open_happiness_box{float:right;width:300px;padding:8px;}
-.open_happiness_box{width:296px;overflow:hidden;}
+.open_happiness_box{width:296px;overflow:hidden;z-index:1;}
 
 /* badges */
 .badges{height:290px;background:url(/images/multitask/bg_badges.png) no-repeat center top;padding-top:30px;position:relative;}
